<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:id="@+id/relativeLayout1">
        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:background="@color/primary" />
        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="22dp"
            android:textColor="@color/md_white_1000"
            android:layout_gravity="center_horizontal"
            android:layout_below="@id/app_icon"
            android:layout_centerHorizontal="true" />
        <TextView
            android:id="@+id/app_description"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:text="@string/app_description"
            android:lines="3"
            android:textSize="15dp"
            android:textColor="@color/md_white_1000"
            android:gravity="center_horizontal"
            android:layout_below="@id/app_name"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relativeLayout1">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">
            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/card_about_1"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:foreground="?android:attr/selectableItemBackground">
                <com.pkmmte.view.CircularImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/javier_santos"
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="center_vertical"
                    app:border="true"
                    app:border_color="@color/divider"
                    app:border_width="4dp" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Javier Santos"
                        android:textSize="22dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_1_description"
                        android:textSize="18dp"
                        android:textStyle="italic" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/card_about_2"
                android:layout_below="@id/card_about_1"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:foreground="?android:attr/selectableItemBackground">
                <com.pkmmte.view.CircularImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/osama_asif"
                    android:layout_marginLeft="20dp"
                    android:layout_gravity="center_vertical"
                    app:border="true"
                    app:border_color="@color/divider"
                    app:border_width="4dp" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Osama Asif"
                        android:textSize="18dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_2_description"
                        android:textSize="14dp"
                        android:textStyle="italic" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>