<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:wheel="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:id="@+id/main_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:background="@color/primary" />
        <TextView
            android:id="@+id/moticoins_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/md_white_1000"
            android:layout_gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">
        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/moticoins_video"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_margin="5dp">
            <com.pnikosis.materialishprogress.ProgressWheel
                android:id="@+id/progress"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal|center_vertical"
                wheel:matProg_barColor="@color/primary"
                wheel:matProg_progressIndeterminate="true" />
            <LinearLayout
                android:id="@+id/show_ad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/card_horizontal_margin"
                    android:layout_marginStart="@dimen/card_horizontal_margin"
                    android:text="@string/moticoins_ad"
                    android:textSize="25sp" />
                <TextView
                    android:id="@+id/show_ad_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_marginLeft="@dimen/card_description_horizontal_margin"
                    android:layout_marginRight="@dimen/card_description_horizontal_margin"
                    android:text="@string/moticoins_ad_description"
                    android:textSize="14sp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/card_googleplus"
            android:layout_below="@id/moticoins_video"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_margin="5dp">
            <com.pkmmte.view.CircularImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/googleplus"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_gravity="center_vertical"
                app:border="true"
                app:border_color="@color/divider"
                app:border_width="4dp" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/googleplus_share"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/card_googleplus_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/card_description_horizontal_margin"
                    android:layout_marginEnd="@dimen/card_description_horizontal_margin"
                    android:text="@string/googleplus_share_description"
                    android:textSize="14sp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relativeLayout1">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/remove_ads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">
                <android.support.v7.widget.CardView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/remove_ads_inapp"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:foreground="?android:attr/selectableItemBackground">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/remove_ads_label_inapp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:background="@drawable/right"
                            android:textColor="@color/md_white_1000"
                            android:textSize="16sp"
                            android:layout_alignParentRight="true" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/moticoins_remove_ads"
                            android:textSize="16sp"
                            android:layout_marginLeft="14sp"
                            android:layout_marginStart="14sp"
                            android:layout_marginRight="80sp"
                            android:layout_marginEnd="80sp"
                            android:layout_centerVertical="true" />
                    </RelativeLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/remove_ads_moticoins"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:foreground="?android:attr/selectableItemBackground">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/remove_ads_label_moticoins"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:background="@drawable/right"
                            android:textColor="@color/md_white_1000"
                            android:textSize="16sp"
                            android:layout_alignParentRight="true" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/moticoins_remove_ads"
                            android:textSize="16sp"
                            android:layout_marginLeft="14sp"
                            android:layout_marginStart="14sp"
                            android:layout_marginRight="80sp"
                            android:layout_marginEnd="80sp"
                            android:layout_centerVertical="true" />
                    </RelativeLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/unlock_moticons"
                android:layout_below="@id/remove_ads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">
                <android.support.v7.widget.CardView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/unlock_moticons_inapp"
                    android:layout_below="@+id/remove_ads_inapp"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:foreground="?android:attr/selectableItemBackground">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/unlock_moticons_label_inapp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:background="@drawable/right"
                            android:textColor="@color/md_white_1000"
                            android:textSize="16sp"
                            android:layout_alignParentRight="true" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/moticoins_unlock_moticons"
                            android:textSize="16sp"
                            android:layout_marginLeft="14sp"
                            android:layout_marginStart="14sp"
                            android:layout_marginRight="80sp"
                            android:layout_marginEnd="80sp"
                            android:layout_centerVertical="true" />
                    </RelativeLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/unlock_moticons_moticoins"
                    android:layout_below="@+id/remove_ads_inapp"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:foreground="?android:attr/selectableItemBackground">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/unlock_moticons_label_moticoins"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:background="@drawable/right"
                            android:textColor="@color/md_white_1000"
                            android:textSize="16sp"
                            android:layout_alignParentRight="true" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/moticoins_unlock_moticons"
                            android:textSize="16sp"
                            android:layout_marginLeft="14sp"
                            android:layout_marginStart="14sp"
                            android:layout_marginRight="80sp"
                            android:layout_marginEnd="80sp"
                            android:layout_centerVertical="true" />
                    </RelativeLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
